...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tagging">

    <Spinner
        android:id="@+id/spinner_color"
        android:layout_width="183dp"
        android:layout_height="26dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/text_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
